libs/extractor/tests/snapshots/snapshots/extractor__tests__ignore_special_props-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Input} from '@devup-ui/core'\n        <Input placeholder=\"a\" maxLength=\"b\" minLength=\"c\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<input placeholder=\"a\" maxLength=\"b\" minLength=\"c\" />;\n",
}
