libs/extractor/tests/snapshots/snapshots/extractor__tests__keyframes_function.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {keyframes} from '@devup-ui/core'\nconst spin = keyframes({\n    from: { transform: \"rotate(0deg)\" },\n    to: { transform: \"rotate(360deg)\" }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "transform",
                            value: "rotate(0)",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "to": [
                        ExtractStaticStyle {
                            property: "transform",
                            value: "rotate(360deg)",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst spin = \"a-a\";\n",
}
