libs/extractor/tests/snapshots/snapshots/extractor__tests__keyframes_no_args.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {keyframes} from '@devup-ui/core'\nconst spin = keyframes()\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "const spin = \"\";\n",
}
